--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="./css/output.css" />
   </head>
   <body class="min-h-screen flex items-center">
-    <div
-      class="background bg-cover w-full min-h-screen p-0 absolute top-0 left-0"
-    ></div>
+    <div class="background"></div>
 
     <section
       class="glass w-[90%] p-4 rounded-lg shadow-sm relative m-auto md:flex md:w-max md:h-max md:items-center md:w-11/12 md:p-6 lg:w-9/12 xl:w-7/12"
@@ -30,6 +28,11 @@
           <div class="font-light flex md:flex-col md:gap-1">
             <span class="flex-1">ISIT 320</span>
             <span class="italic bold tracking-wider">Fall 2022 </span>
+            <a
+              class="underline text-indigo-800 hover:text-purple-900"
+              href="./html/resources.html"
+              >Web Resources
+            </a>
           </div>
         </div>
       </div>
@@ -45,7 +48,7 @@
         Node.js or Firebase on the backend. Some of my projects can be found
         here:
         <a
-          class="inline-block text-blue-700 hover:underline"
+          class="inline-block text-indigo-800 hover:text-purple-900"
           href="https://hammaadmemon.com"
           rel="noreferrer"
           target="_blank"
@@ -53,7 +56,5 @@
         >
       </p>
     </section>
-
-    <script src="./waves.js"></script>
   </body>
 </html>
