--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="background"></div>
 
     <section
-      class="glass w-[90%] p-4 rounded-lg shadow-sm relative m-auto md:flex md:w-max md:h-max md:items-center md:w-11/12 md:p-6 lg:w-9/12 xl:w-7/12"
+      class="glass w-[90%] p-4 rounded-lg shadow-sm relative m-auto sm:flex md:w-max md:h-max sm:items-center md:w-11/12 md:p-6 lg:w-9/12 xl:w-7/12"
     >
       <div
-        class="flex w-full px-2 py-3 items-center justify-center gap-2 fogged-glass md:flex-col md:w-min md:px-10 md:py-4 md:text-center"
+        class="flex w-full px-2 py-3 flex-col items-center justify-center gap-2 fogged-glass sm:w-min sm:px-8 sm:py-3 md:px-10 md:py-4 md:text-center"
       >
         <img
           class="rounded-full w-24 md:w-28 lg:w-36"
@@ -25,7 +25,9 @@
           <h1 class="font-bold text-lg md:text-xl md:w-min md:mb-4">
             Hammaad Memon
           </h1>
-          <div class="font-light flex md:flex-col md:gap-1">
+          <div
+            class="font-light flex justify-center text-center mt-1 flex-col md:gap-1"
+          >
             <span class="flex-1">ISIT 320</span>
             <span class="italic bold tracking-wider">Fall 2022 </span>
             <a
