--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="min-h-screen flex items-center">
     <div class="background"></div>
-
+    <p class="hidden">version 2</p>
     <section
       class="glass w-[90%] p-4 rounded-lg shadow-sm relative m-auto sm:flex md:w-max md:h-max sm:items-center md:w-11/12 md:p-6 lg:w-9/12 xl:w-7/12"
     >
