--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/output.css" />
   </head>
   <body class="min-h-screen flex items-center">
+    <!-- version 2 UI -->
     <div class="background"></div>
     <section
       class="glass w-[90%] p-4 rounded-lg shadow-sm relative m-auto sm:flex md:w-max md:h-max sm:items-center md:w-11/12 md:p-6 lg:w-9/12 xl:w-7/12"
