--- a/html/resources.html
+++ b/html/resources.html
@@ -41,7 +41,7 @@
 
             <li>
                 <p id="b">
-                <a href="link path" class="title">TailwindCSS Docs</a><br />
+                <a href="https://tailwindcss.com/docs/" class="title">TailwindCSS Docs</a><br />
                 Documentation for TailwindCSS, a utility-based CSS framework that offers the customizability of custom CSS, just a whole lot quicker.<br />
                 Documentation is as good as it gets, mapping CSS to the utility classes while even explaining the concepts behind the CSS.<br />
                 <p class="rating">Rating: 5/5</p>
@@ -66,7 +66,7 @@
             </li>
             <li class="col-span-2">
                 <p id="e">
-                <a href="link path" class="title">MDN Reference</a><br />
+                <a href="https://developer.mozilla.org/en-US/docs/Web" class="title">MDN Reference</a><br />
                 The industry grade documentation for HTML, CSS, and JavaScript. Fully extensive yet not the easiest to read. <br />
                 There's always something new to learn here.<br />
                 <p class="rating">Rating 5/5</p>
