add project page

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
               href="./html/resources.html"
               >Web Resources
             </a>
+            <span class="my-2"></span>
+            <a
+              class="underline text-indigo-800 hover:text-purple-900"
+              href="./html/project.html"
+              >Group Project
+            </a>
           </div>
         </div>
       </div>
