add NEW tag to link

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <!-- version 2 UI -->
     <div class="background"></div>
     <section
-      class="glass w-[90%] p-4 rounded-lg shadow-sm relative m-auto sm:flex md:w-max md:h-max sm:items-center md:w-11/12 md:p-6 lg:w-9/12 xl:w-7/12"
+      class="glass w-[90%] p-4 rounded-lg shadow-sm relative m-auto sm:flex md:w-max md:h-max sm:items-center md:w-11/12 md:p-6 lg:w-9/12 xl:w-8/12"
     >
       <div
-        class="flex w-full px-2 py-3 flex-col items-center justify-center gap-2 fogged-glass sm:w-min sm:px-8 sm:py-3 md:px-10 md:py-4 md:text-center"
+        class="flex w-full px-2 py-3 flex-col items-center justify-center gap-2 fogged-glass sm:w-min sm:px-8 sm:py-3 md:px-10 md:py-4 lg:w-max lg:text-center"
       >
         <img
           class="rounded-full w-24 md:w-28 lg:w-36"
@@ -22,7 +22,9 @@
           alt="hammaad memon"
         />
         <div>
-          <h1 class="font-bold text-lg md:text-xl md:w-min md:mb-4">
+          <h1
+            class="font-bold text-lg md:text-xl md:w-min md:mb-4 lg:relative lg:mx-auto"
+          >
             Hammaad Memon
           </h1>
           <div
@@ -35,12 +37,18 @@
               href="./html/resources.html"
               >Web Resources
             </a>
-            <span class="my-2"></span>
-            <a
-              class="underline text-indigo-800 hover:text-purple-900"
-              href="./html/project.html"
-              >Group Project
-            </a>
+            <span class="my-1"></span>
+            <div class="flex gap-1 lg:gap-2 place-items-center w-max">
+              <a
+                class="underline text-indigo-800 hover:text-purple-900 w-max"
+                href="./html/project.html"
+                >Group Project
+              </a>
+              <span
+                class="rounded-full px-2 py-1 lg:py-0.5 lg:px-4 bg-purple-900 text-white text-xs h-min"
+                >NEW</span
+              >
+            </div>
           </div>
         </div>
       </div>
